ChangeLog

1.1.6
	Updated for KSP 1.8

1.1.5.3
	Updated AssemblyVersion.tt
	Added InstallChecker

1.1.5.1
	Version bump for 1.5 rebuild

1.1.5
	Added Alternate skin settings
	Added ability to change font size

1.1.4.1
	Updated .version file for all 1.4.x

1.1.4
	Fixed nullrefs when doing symmetry parts
	Added toolbar registration
	Removed old toolbar code

1.1.3.3
	Fix for missing events

1.1.3.2
	Fix for missing directories

1.1.3.1
	Fixed unresponsive button when window is opened by config
	Fixed nullref at startup
	Removed debugging statement

1.1.3
	Fixed localization strings being displayed in fields
	Added support for the ClickThroughBlocker
	Changed to allow dragging window from anywhere
	Added support for the ToolbarController
	Replaced most "foreach" with (for int i = ) loops for effeciency and memory conservation

1.1.2 - 
	Updated for KSP 1.3.1
	Changed version numbering to be in line with original mod numbering

0.1.2 = Updated for KSP 1.3

0.1.1 - Fixed problem with toolbarwrapper.cs

0.1.0 - Initial release







Old CHANGELOG

1.1.1 - 2016/05/06
- recompiled for KSP 1.1.2

1.1 - 2016/04/27
- fixed and recompiled for KSP 1.1

1.0.3.0 - 2015/11/20
- recompiled for KSP 1.0.5
- fix a bug where hiding window with keyboard shortcut failed to release control lock

1.0.2.4 - 2015/07/31
- fixes a NRE that was showing up in the logs

1.0.2.3 - 2015/07/18
- bug fixes to hover logic and part highlighting

1.0.2.2 - 2015/07/09
- another hotfix to correct an issue with settings not being saved properly to the persistent config file

1.0.2.1 - 2015/07/08
- hotfix to correct an issue where the part list wouldn't always update when parts were destroyed

1.0.2 - 2015/07/08
- added persistent PartCommander.cfg settings file which gets created under GameData/PartCommander
- created new Settings window to manage this file
- added optional support for blizzy78's Toolbar (http://forum.kerbalspaceprogram.com/threads/60863)