@@ -2,16 +2,15 @@
   "NAME": "PartCommanderContinued",
   "URL": "http://ksp.spacetux.net/avc/PartCommanderContinued",
   "DOWNLOAD": "https://github.com/LinuxGuruGamer/PartCommander/releases",
-  "GITHUB" :
-  {
-	"USERNAME" : "linuxgurugamer",
-	"REPOSITORY" : "PartCommander"
+  "GITHUB": {
+    "USERNAME": "linuxgurugamer",
+    "REPOSITORY": "PartCommander"
   },
   "VERSION": {
     "MAJOR": 1,
     "MINOR": 1,
-    "PATCH": 5,
-    "BUILD": 1
+    "PATCH": 6,
+    "BUILD": 0
   },
   "KSP_VERSION": {
     "MAJOR": 1,
@@ -20,12 +19,7 @@
   },
   "KSP_VERSION_MIN": {
     "MAJOR": 1,
-    "MINOR": 5,
-    "PATCH": 1
-  },
-  "KSP_VERSION_MAX": {
-    "MAJOR": 1,
-    "MINOR": 5,
-    "PATCH": 99
+    "MINOR": 8,
+    "PATCH": 0
   }
 }
