@@ -10,4 +10,4 @@
   
  using System.Reflection;
 
- [assembly: AssemblyVersion("1.1.5.3")]
+ [assembly: AssemblyVersion("1.1.6.0")]
